[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "UmbrellaRL_ctorrington"
version = "0.0.0"
authors = [
  { name="Christopher Torrington", email="ctorrington1@gmail.com" },
]
description = "Reiforcement Learning package description."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
