[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "UmbrellaRL"
version = "0.1.0"
authors = [
  { name="Christopher Torrington", email="ctorrington1@gmail.com" },
]
description = "Package to handle Reinforcement Learning functions."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ctorrington/UmbrellaRL"
Issues = "https://github.com/ctorrington/UmbrellaRL/issues"
